--- a/View/MembersAddDialog.xaml
+++ b/View/MembersAddDialog.xaml
@@ -14,7 +14,7 @@
             <RowDefinition />
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Label Content="Add Member" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Label Name="dialogLabel" Content="Add Member" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <Grid Margin="5" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="70" />
